--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,33 @@
 .btn {
-    background-color: #248bf5;
-    color: white;
-    padding: 0.4em;
-    border: none;
-    border-radius: 0.2rem;
+  background-color: #248bf5;
+  color: white;
+  padding: 0.4em;
+  border: none;
+  border-radius: 0.2rem;
 }
 
 input[type="text" i] {
-    padding: 0.3em;
+  padding: 0.3em;
 }
 
 .nick {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 #chat-area {
-    background-color: #fff;
-    border: 1px solid #e5e5ea;
-    border-radius: 0.25rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0.5rem;
+  background-color: #fff;
+  border: 1px solid #e5e5ea;
+  border-radius: 0.25rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0.5rem;
 }
 
 .msg {
   border-radius: 1.15rem;
   line-height: 1.25;
-  padding: 0.5rem .875rem;
+  padding: 0.5rem 0.875rem;
   margin: 0.1rem;
   position: relative;
   word-wrap: break-word;
